--- a/styles/main.css
+++ b/styles/main.css
@@ -5,8 +5,11 @@
     --accent-dark: #F37335;
     --dark: #443737;
     --light: #fff;
-    --WL: 255,255,255
+    --WL: 255,255,255;
 
+}
+body{
+    background-color: var(--dark);
 }
 .container{
     max-width: 1180px;
@@ -18,14 +21,13 @@
 .header{
     display: flex;
     gap: 196px;
-    padding-top: 26px;
-    padding-bottom: 26px;
     align-items: center;
+    background-color: var(--dark);
 }
 .logo{
-    background-image: url(../img/logo.svg);
-    width: 176px;
-    height: 56px;
+    
+    width: 160px;
+    height: 62px;
     background-repeat: no-repeat;
     background-size: contain;
 }
@@ -36,7 +38,7 @@ nav{
 }
 .navLink{
     text-decoration: none;
-    color: var(--dark);
+    color: var(--light);
     font-family: var(--OS);
     font-size: 20px;
     font-weight: 600;
@@ -57,7 +59,7 @@ nav{
 
 .cart{
     text-decoration: none;
-    color: var(--dark);
+    color: var(--light);
     font-family: var(--OS);
     font-weight: 700;
     font-size: 15px;
@@ -80,7 +82,7 @@ nav{
     list-style-type: none;
     display: flex;
     justify-content: center;
-    color: rgba(var(--WL), .5);
+    color: rgb(var(--WL), 1);
     font-size: 15px;
     gap: 16px;
     padding-left: 0;
@@ -88,7 +90,7 @@ nav{
 }
 
 .breadcrumbs-link{
-    color: rgba(var(--WL), .5);
+    color: rgb(var(--WL));
     text-decoration: none;
 }
 
@@ -124,7 +126,7 @@ nav{
 .hero-discription{
     font-size: 15px;
     font-family: var(--OS);
-    color: rgba(var(--WL), .8);
+    color: rgb(var(--WL));
     max-width: 320px;
     margin: 0 auto;
     line-height: 160%;
@@ -161,7 +163,7 @@ nav{
 
 .banner-discription{
     font-family: var(--OS);
-    color: rgba(var(--WL), .8);
+    color: rgb(var(--WL), .8);
     font-style: normal;
     font-weight: 400;
     max-width: 353px;
@@ -246,7 +248,7 @@ nav{
 .catalog-item-title{
     font-weight: 600;
     font-size: 30px;
-    color: var(--dark);
+    color: var(--light);
     text-align: center;
     text-decoration: nones;
     margin-bottom: 5px;
@@ -256,7 +258,7 @@ nav{
     font-weight: bold;
     text-align: center;
     font-size: 20px;
-    color: rgba(68, 55, 55, 50%);
+    color: rgb(68, 55, 55, 50%);
     text-decoration: none;
     margin-top: 0px;
 }
@@ -307,5 +309,28 @@ nav{
 
 }
 .footer-title{
+    font-family: var(--NS);
+    font-size: bold;
+    text-transform: uppercase;
+}
+.footer-list{
+    list-style: none;
     text-decoration: none;
+    font-family: var(--OS);
+    color: rgb(var(--WL), .8);
+}
+.footer-phone{
+    color: #FBB731;
+    font-family: var(--NS);
+    font-size: bold;
+    text-transform: uppercase;
+
+    text-decoration: none;
+}
+.menu-logo.svelte-ji6ksg.svelte-ji6ksg {
+    position: relative;
+    height: 100%;
+    display: flex;
+    align-items: stretch;
+
 }
